--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# module name here\n",
+    "# gfparser\n",
     "\n",
     "> API details."
    ]
@@ -25,7 +25,8 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from nbdev.showdoc import *"
+    "from nbdev.showdoc import *\n",
+    "from fastcore.test import *"
    ]
   },
   {
@@ -33,14 +34,48 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#export\n",
+    "def say_hello(to):\n",
+    "    \"Say hello to somebody\"\n",
+    "    return f'Hello {to}!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Nikola!'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "say_hello(\"Nikola\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_eq(say_hello(\"Nikola\"), \"Hello Nikola!\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "gfparser",
    "language": "python",
-   "name": "python3"
+   "name": "gfparser"
   }
  },
  "nbformat": 4,
