added more requirements

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -26,7 +26,16 @@
    "source": [
     "#hide\n",
     "from nbdev.showdoc import *\n",
-    "from fastcore.test import *"
+    "from fastcore.test import *\n",
+    "import requests\n",
+    "import time\n",
+    "import chardet\n",
+    "import re\n",
+    "import pyprind\n",
+    "import pickle\n",
+    "from unicodedata import normalize\n",
+    "from collections import OrderedDict\n",
+    "from prettytable import PrettyTable"
    ]
   },
   {
@@ -69,6 +78,33 @@
    "source": [
     "test_eq(say_hello(\"Nikola\"), \"Hello Nikola!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 00_core.ipynb.\n",
+      "Converted index.ipynb.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#hide\n",
+    "from nbdev.export import notebook2script\n",
+    "notebook2script()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
