--- a/index.ipynb
+++ b/index.ipynb
@@ -4,9 +4,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "#hide\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "from gfparser import *"
    ]
   },
@@ -14,9 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# GF Parser \n",
     "\n",
-    "> Summary description here."
+    "> Pulls useful information from the web, helping you make flashcards for learning the German language."
    ]
   },
   {
@@ -73,6 +84,13 @@
    "source": [
     "say_hello(\"Nikola\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
