--- a/index.ipynb
+++ b/index.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "Welcome to GF parser, an app to help you make flashcards for learning German faster!"
    ]
   },
   {
@@ -32,13 +32,6 @@
    "metadata": {},
    "source": [
     "## Install"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Still not working!"
    ]
   },
   {
@@ -245,13 +238,6 @@
     "for w in parser.words:\n",
     "    print (w)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
